Hiding Icon Marker When New Polygon

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -233,6 +233,7 @@
             polyCoords = [];
             polygon.setMap(null);
             circle.setMap(null);
+            iconMarker.setMap(null);
             $(".btn.undo").show();
           }
           const clickedLocation = event.latLng;
