PolyLine reset clickable

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -91,6 +91,7 @@
             new google.maps.Polyline({
               path: element.polygonCoords,
               map: map,
+              clickable: false,
             });
           });
           stepsPerSegment = haversineDistance(
